feat: add templateref

--- a/projects/ng-picker/src/lib/calendar/calendar.html
+++ b/projects/ng-picker/src/lib/calendar/calendar.html
@@ -1,3 +1,7 @@
 @switch (view()) { @case ('month') {
-<pk-month-view [period]="period()"></pk-month-view>
+<pk-month-view
+  [calendarCellRef]="calendarCellRef()"
+  [period]="period()"
+  [today]="today()"
+></pk-month-view>
 } }
