feat: add disable dates

--- a/projects/ng-picker/src/lib/calendar/calendar.html
+++ b/projects/ng-picker/src/lib/calendar/calendar.html
@@ -3,5 +3,13 @@
   [calendarCellRef]="calendarCellRef()"
   [period]="period()"
   [today]="today()"
+  [mode]="mode()"
+  [value]="value()"
+  (selectDate)="selectDate.emit($event)"
+  [disableFuture]="disableFuture()"
+  [disablePast]="disablePast()"
+  [disableToday]="disableToday()"
+  [minDate]="minDate()"
+  [maxDate]="maxDate()"
 ></pk-month-view>
 } }
