add filter date

--- a/projects/ng-picker/src/lib/calendar/calendar.html
+++ b/projects/ng-picker/src/lib/calendar/calendar.html
@@ -11,5 +11,6 @@
   [disableToday]="disableToday()"
   [minDate]="minDate()"
   [maxDate]="maxDate()"
+  [filterDate]="filterDate()"
 ></pk-month-view>
 } }
