--- a/projects/ng-picker/src/lib/calendar/year-view/year-view.html
+++ b/projects/ng-picker/src/lib/calendar/year-view/year-view.html
@@ -1,1 +1,6 @@
-<p>year-view works!</p>
+<button (click)="changeView.emit('multi-year')">{{ currentYear() }}</button>
+<div class="year-grid">
+  @for (month of months(); track $index) {
+  <button (click)="changeView.emit('month')">{{ month.name }}</button>
+  }
+</div>
