--- a/projects/ng-picker/src/lib/calendar/calendar.html
+++ b/projects/ng-picker/src/lib/calendar/calendar.html
@@ -1,3 +1,5 @@
+<pk-calendar-header [view]="view()" [period]="period()"></pk-calendar-header>
+
 @switch (view()) { @case ('month') {
 <pk-month-view
   [calendarCellRef]="calendarCellRef()"
@@ -12,5 +14,11 @@
   [minDate]="minDate()"
   [maxDate]="maxDate()"
   [filterDate]="filterDate()"
+  (goToNextMonth)="goToNextMonth()"
+  (goToPrevMonth)="goToPrevMonth()"
 ></pk-month-view>
+} @case ('year') {
+<pk-year-view (changeView)="changeView($event)" [period]="period()"></pk-year-view>
+} @case ('multi-year') {
+<pk-multi-year-view [period]="period()"></pk-multi-year-view>
 } }
