--- a/projects/ng-picker/src/lib/calendar/month-view/month-view.html
+++ b/projects/ng-picker/src/lib/calendar/month-view/month-view.html
@@ -1,4 +1,11 @@
-<table role="grid">
+<table
+  role="grid"
+  pkGrid
+  (goToDown)="goToNextMonth.emit()"
+  (goToUp)="goToPrevMonth.emit()"
+  (goToLeft)="goToPrevMonth.emit()"
+  (goToRight)="goToNextMonth.emit()"
+>
   <thead>
     <tr>
       @for (week of weekDays(); track $index) {
@@ -7,14 +14,24 @@
     </tr>
   </thead>
   @for (weekCell of weekCells(); track $index) {
-  <tr>
+  <tr pkGridRow>
     @for (cell of weekCell; track $index) {
     <td style="width: 40px">
-      <pk-month-view-cell
-        (selectDate)="selectDate.emit($event)"
-        [calendarCellRef]="calendarCellRef()"
-        [cell]="cell"
-      ></pk-month-view-cell>
+      <button
+        pkGridCell
+        class="pk-picker-date-cell"
+        [class.pk-picker-date-cell--today]="cell.isToday"
+        [class.pk-picker-date-cell--selected]="cell.isSelected"
+        [class.pk-picker-date-cell--disabled]="cell.isDisabled"
+        [disabled]="cell.isDisabled"
+        (click)="selectDate.emit(cell)"
+      >
+        <pk-month-view-cell
+          (selectDate)="selectDate.emit($event)"
+          [calendarCellRef]="calendarCellRef()"
+          [cell]="cell"
+        ></pk-month-view-cell>
+      </button>
     </td>
     }
   </tr>
