--- a/projects/ng-picker/src/lib/datepicker/datepicker.html
+++ b/projects/ng-picker/src/lib/datepicker/datepicker.html
@@ -1,6 +1,7 @@
 <pk-calendar
   [value]="value()"
   [mode]="mode()"
+  [startView]="startView()"
   [calendarCellRef]="calendarCellRef()"
   (selectDate)="selectDate($event)"
   [disableFuture]="disableFuture()"
