--- a/projects/ng-picker/src/lib/calendar/calendar-nav-icon/calendar-nav-icon.html
+++ b/projects/ng-picker/src/lib/calendar/calendar-nav-icon/calendar-nav-icon.html
@@ -4,7 +4,7 @@
   height="24px"
   viewBox="0 -960 960 960"
   width="24px"
-  fill="#1f1f1f"
+  fill="currentColor"
 >
   <path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z" />
 </svg>
@@ -14,7 +14,7 @@
   height="24px"
   viewBox="0 -960 960 960"
   width="24px"
-  fill="#1f1f1f"
+  fill="currentColor"
 >
   <path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z" />
 </svg>
