--- a/projects/ng-picker/src/lib/datepicker/datepicker.html
+++ b/projects/ng-picker/src/lib/datepicker/datepicker.html
@@ -1,13 +1,21 @@
-<pk-calendar
-  [value]="value()"
-  [mode]="mode()"
-  [startView]="startView()"
-  [calendarCellRef]="calendarCellRef()"
-  (selectDate)="selectDate($event)"
-  [disableFuture]="disableFuture()"
-  [disablePast]="disablePast()"
-  [disableToday]="disableToday()"
-  [minDate]="minDate()"
-  [maxDate]="maxDate()"
-  [filterDate]="filterDate()"
-></pk-calendar>
+<ng-template cdkPortal #pickerPortal="cdkPortal">
+  <div class="pk-picker-datepicker">
+    <pk-calendar
+      [value]="value()"
+      [mode]="mode()"
+      [startView]="startView()"
+      [calendarCellRef]="calendarCellRef()"
+      (selectDate)="selectDate($event)"
+      [disableFuture]="disableFuture()"
+      [disablePast]="disablePast()"
+      [disableToday]="disableToday()"
+      [minDate]="minDate()"
+      [maxDate]="maxDate()"
+      [filterDate]="filterDate()"
+    ></pk-calendar>
+  </div>
+</ng-template>
+
+@if (inline()) {
+<div [cdkPortalOutlet]="portal()"></div>
+}
