--- a/projects/ng-picker/src/lib/calendar/month-view/month-view.html
+++ b/projects/ng-picker/src/lib/calendar/month-view/month-view.html
@@ -53,18 +53,18 @@
   </thead>
   @for (week of weekCells(); track $index) {
   <tr pkGridRow>
-    @for (_ of pad(week.startPad); track $index) {
+    @for (pad of startPad(week.startPad); track $index) {
     <td>
-      <button disabled aria-hidden="true"></button>
+      <button disabled aria-hidden="true" class="pk-day-cell-blank">{{ pad.displayValue }}</button>
     </td>
     } @for (cell of week.cells; track $index) {
     <td>
       <button
         pkGridCell
-        class="pk-picker-day-cell"
-        [class.pk-picker-day-cell-selected]="cell.isSelected"
-        [class.pk-picker-day-cell-today]="cell.isToday"
-        [class.pk-picker-day-cell-in-range]="cell.isInRange"
+        class="pk-day-cell"
+        [class.pk-day-cell-selected]="cell.isSelected"
+        [class.pk-day-cell-today]="cell.isToday"
+        [class.pk-day-cell-in-range]="cell.isInRange"
         [disabled]="cell.isDisabled"
         (click)="selectDate.emit(cell)"
       >
@@ -76,9 +76,9 @@
         {{ _cell.displayValue }} }
       </button>
     </td>
-    } @for (_ of pad(week.endPad); track $index) {
+    } @for (pad of endPad(week.endPad); track $index) {
     <td>
-      <button disabled aria-hidden="true"></button>
+      <button disabled aria-hidden="true" class="pk-day-cell-blank">{{ pad.displayValue }}</button>
     </td>
     }
   </tr>
